--- a/professional-training/hr-people-maagement-training.html
+++ b/professional-training/hr-people-maagement-training.html
@@ -457,7 +457,7 @@
                       <div class="item-text">
                         <a
                           href="/professional-training/hr-people-maagement-training.html"
-                          aria-current="page"
+                          aria-current="page" class="active-navlink"
                           ><strong>HR &amp; People Management</strong>
                           <div class="item-sub">
                             Practical HR training that builds modern people
