--- a/talent-management-hr-solution/career-service.html
+++ b/talent-management-hr-solution/career-service.html
@@ -210,9 +210,9 @@
             <div class="mega-menu" aria-hidden="">
               <div class="mega-container">
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -297,6 +297,7 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/career-service.html"
+                          aria-current="page" class="active-navlink"
                           ><strong>Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
