--- a/talent-management-hr-solution/hr-policies-employee-handbook.html
+++ b/talent-management-hr-solution/hr-policies-employee-handbook.html
@@ -206,9 +206,9 @@
             <div class="mega-menu" aria-hidden="">
               <div class="mega-container">
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -278,6 +278,7 @@
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
+                          aria-current="page" class="active-navlink"
                           ><strong>HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
