--- a/talent-management-hr-solution/talent-payroll-outsourcing.html
+++ b/talent-management-hr-solution/talent-payroll-outsourcing.html
@@ -206,9 +206,9 @@
             <div class="mega-menu" aria-hidden="">
               <div class="mega-container">
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -251,6 +251,7 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
+                          aria-current="page" class="active-navlink"
                           ><strong>Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
