--- a/business-development/auditing-reconciliation.html
+++ b/business-development/auditing-reconciliation.html
@@ -194,9 +194,7 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
-              >Home</a
-            >
+            <a href="/index.html">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
             <a href="/service.html" class="nav-link"
@@ -306,9 +304,9 @@
                 </ul>
 
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Business Development &amp; Strategy
-                    <a href="/services/business-development-strategy.html"
+                    <a href="/services/business-development-strategy.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -404,7 +402,8 @@
                       ></i>
                       <div class="item-text">
                         <a href="/business-development/auditing-reconciliation.html"
-                          ><strong>Auditing &amp; Reconciliation</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">Auditing &amp; Reconciliation</strong>
                           <div class="item-sub">
                             Ensure compliance, accuracy, and accountability.
                           </div></a
