--- a/business-development/market-research-business-analysis.html
+++ b/business-development/market-research-business-analysis.html
@@ -192,9 +192,7 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
-              >Home</a
-            >
+            <a href="/index.html">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
             <a href="/service.html" class="nav-link"
@@ -304,9 +302,9 @@
                 </ul>
 
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Business Development &amp; Strategy
-                    <a href="/services/business-development-strategy.html"
+                    <a href="/services/business-development-strategy.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -318,7 +316,8 @@
                       ></i>
                       <div class="item-text">
                         <a href="/business-development/market-research-business-analysis.html"
-                          ><strong
+                          aria-current="page"
+                          ><strong class="active-navlink"
                             >Market Research &amp; Business Analysis</strong
                           >
                           <div class="item-sub">
