--- a/professional-training/leadership-management.html
+++ b/professional-training/leadership-management.html
@@ -200,7 +200,7 @@
             <a href="/index.html" class="nav-link">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"
                 ><i
@@ -445,8 +445,8 @@
                       <div class="item-text">
                         <a
                           href="/professional-training/leadership-management.html"
-                          aria-current="page" class="active-navlink"
-                          ><strong>Leadership &amp; Management</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">Leadership &amp; Management</strong>
                           <div class="item-sub">
                             Programmes that grow leaders who can align people,
                             strategy and execution.
