--- a/talent-management-hr-solution/training-development.html
+++ b/talent-management-hr-solution/training-development.html
@@ -209,9 +209,9 @@
             <div class="mega-menu" aria-hidden="">
               <div class="mega-container">
                 <ul role="list" class="mega-col">
-                  <li role="listitem" class="mega-col-list">
+                  <li role="listitem" class="mega-col-list active-navlink">
                     Talent Management &amp; HR Solutions
-                    <a href="/services/talent-management-hr-solution.html"
+                    <a href="/services/talent-management-hr-solution.html" class="active-navlink"
                       ><i class="fa-solid fa-link"></i> Explore</a
                     >
                   </li>
@@ -239,6 +239,7 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/training-development.html"
+                          aria-current="page" class="active-navlink"
                           ><strong>Training &amp; Development</strong>
                           <div class="item-sub">
                             Tailored corporate programs that boost employee
