--- a/talent-management-hr-solution/recruitment-selection.html
+++ b/talent-management-hr-solution/recruitment-selection.html
@@ -196,12 +196,12 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -223,8 +223,8 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/recruitment-selection.html"
-                          aria-current="page" class="active-navlink"
-                          ><strong>Recruitment &amp; Selection</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">Recruitment &amp; Selection</strong>
                           <div class="item-sub">
                             Find and retain the right talent through a
                             structured hiring process that ensures cultural and
