--- a/business-development/auditing-reconciliation.html
+++ b/business-development/auditing-reconciliation.html
@@ -197,7 +197,7 @@
             <a href="/index.html">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
