--- a/business-development/financial-modeling-valuation.html
+++ b/business-development/financial-modeling-valuation.html
@@ -196,7 +196,7 @@
             <a href="/index.html">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="nav-link active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
