--- a/professional-training/hr-people-maagement-training.html
+++ b/professional-training/hr-people-maagement-training.html
@@ -200,7 +200,7 @@
             <a href="/index.html" class="nav-link">Home</a>
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"
                 ><i
