--- a/talent-management-hr-solution/background-checks-verification.html
+++ b/talent-management-hr-solution/background-checks-verification.html
@@ -193,12 +193,12 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -266,8 +266,8 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/background-checks-verification.html"
-                          aria-current="page" class="active-navlink"
-                          ><strong>Background Checks &amp; Verification</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">Background Checks &amp; Verification</strong>
                           <div class="item-sub">
                             Reduce risks with comprehensive employee and
                             guarantor verification.
