--- a/talent-management-hr-solution/career-service.html
+++ b/talent-management-hr-solution/career-service.html
@@ -197,12 +197,12 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -297,8 +297,8 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/career-service.html"
-                          aria-current="page" class="active-navlink"
-                          ><strong>Career Services</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">Career Services</strong>
                           <div class="item-sub">
                             CV, LinkedIn, and professional profile optimization
                             for global opportunities.
