--- a/talent-management-hr-solution/hr-policies-employee-handbook.html
+++ b/talent-management-hr-solution/hr-policies-employee-handbook.html
@@ -193,12 +193,12 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -278,8 +278,8 @@
                       <i class="fa-solid fa-book icon" aria-hidden="true"></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
-                          aria-current="page" class="active-navlink"
-                          ><strong>HR Policies &amp; Employee Handbook</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">HR Policies &amp; Employee Handbook</strong>
                           <div class="item-sub">
                             Clear, transparent policies that align people with
                             business goals.
