--- a/talent-management-hr-solution/talent-payroll-outsourcing.html
+++ b/talent-management-hr-solution/talent-payroll-outsourcing.html
@@ -193,12 +193,12 @@
       <nav class="main-nav">
         <ul role="list">
           <li role="listitem" class="nav-item">
-            <a href="/index.html" class="active-navlink" aria-current="page"
+            <a href="/index.html" aria-current="page"
               >Home</a
             >
           </li>
           <li role="listitem" class="nav-item services" id="service">
-            <a href="/service.html" class="nav-link"
+            <a href="/service.html" class="active-navlink"
               >Our Services
               <span class="caret"><i class="fa-solid fa-chevron-down"></i></span
             ></a>
@@ -251,8 +251,8 @@
                       ></i>
                       <div class="item-text">
                         <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
-                          aria-current="page" class="active-navlink"
-                          ><strong>Talent &amp; Payroll Outsourcing</strong>
+                          aria-current="page"
+                          ><strong class="active-navlink">Talent &amp; Payroll Outsourcing</strong>
                           <div class="item-sub">
                             Stress-free HR and payroll solutions to save time
                             and ensure compliance.
