--- a/terms-condition.html
+++ b/terms-condition.html
@@ -1062,7 +1062,7 @@
         <p>
           <strong>Conceptual Integrated Consulting Limited (CICL)</strong><br />
           Email:
-          <a href="mailto:info@cicl.example">info@ciconsult.com.ng</a><br />
+          <a href="mailto:info@ciconsult.com.ng">info@ciconsult.com.ng</a><br />
           Phone: <span>+234 (0) XXX XXX XXXX</span><br />
           Address: <span>[Insert registered office address here]</span>
         </p>
