--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
     </p>
     <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
       <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
-      <a href="contact.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+      <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
 
     <div data-aos="fade-up" data-aos="fade-down" class="collage">
@@ -892,7 +892,7 @@
             </div>
             <div data-aos="fade-up" data-aos="fade-down" class="actions">
               <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
-              <a href="contact.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+              <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
             </div>
           </div>
         </div>
@@ -1436,7 +1436,7 @@
 
     <div data-aos="fade-up" data-aos="fade-down" class="cta-calls" id="cta-calls">
       <a href="booking.html" class="btn-solid" data-analytics="cta_book_strategy_call">Book Strategy Call</a>
-      <a href="contact.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
+      <a href="proposal.html" class="btn-ghost" data-analytics="cta_request_proposal">Request Proposal</a>
     </div>
   </section>
 
